Add: Completed Song controller with swagger docs
