# src/routes/songRoutes.js
@@ -2,19 +2,21 @@ const express = require('express')
 const songRouter = express.Router()
 const upload = require('../middlewares/upload')
 const {protect, isAdmin} = require('../middlewares/auth')
-const {createSong, getSongs, getSongById, updateSong, deleteSong, getTopSongs} = require('../controllers/songController')
+const {createSong, getSongs, getSongById, updateSong, deleteSong, getTopSongs, getNewReleases} = require('../controllers/songController')
 
 const songUpload = upload.fields([
     { name: "audio", maxCount: 1 },
     { name: "cover", maxCount: 1 },
   ]);
 
-songRouter.post('/', protect, isAdmin, songUpload, createSong )
+
 songRouter.get('/', getSongs)
 songRouter.get('/top', getTopSongs)
+songRouter.get("/new-releases", getNewReleases)
 songRouter.get('/:id', getSongById)
 
 
+songRouter.post('/', protect, isAdmin, songUpload, createSong )
 songRouter.put('/:id', songUpload, protect, isAdmin, updateSong)
 songRouter.delete('/:id', protect, isAdmin, deleteSong)
 
